# faceDetection

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: DownloadGtest.cmake  DownloadOpenCV.cmake  FindBoost.cmake  FindGTest.cmake  FindOpenCV.cmake  build.cmake
cmake/todo/: FindBoost.cmake  FindFoo.cmake  FindGTest.cmake
fdl/: CMakeLists.txt
fdl/inc/: faceDetection.hpp
fdl/src/: faceDetection.cpp
inc/: AbstractRequest.hpp  CmdLineOptions.hpp  Dispatcher.hpp  JsonImageWrapper.hpp  Request.hpp  Types.hpp  Worker.hpp
src/: CmdLineOptions.cpp  Dispatcher.cpp  JsonImageWrapper.cpp  Request.cpp  Worker.cpp
tests/: CMakeLists.txt  main.cpp  testFaceDetection.cpp
